plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

def formatMinecraftSupportLabel = { String supportRange ->
	def normalizedRange = supportRange.trim()
	if (normalizedRange.contains('-')) {
		return normalizedRange.split('-', 2).collect { it.trim().replaceAll(/(?i)\.x/, '.X') }.join('-')
	}
	return normalizedRange.replaceAll(/(?i)\.x/, '.X')
}

def buildArchiveName = "${project.archives_base_name}-fabric-${formatMinecraftSupportLabel(project.minecraft_support_range)}"

version = project.mod_version
group = project.maven_group

base {
	archivesName = buildArchiveName
}

repositories {
	maven { url "https://maven.shedaniel.me/" }
	maven { url "https://maven.terraformersmc.com/" }
}

loom {
	enableTransitiveAccessWideners = false
	splitEnvironmentSourceSets()

	mods {
		"reachcrafting" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// Optional compile/runtime integrations for config UI support.
	modCompileOnly "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
	modLocalRuntime "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
	modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
	modLocalRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	options.release = 21
}

java {
	withSourcesJar()
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

jar {
	inputs.property "archivesName", project.base.archivesName
	archiveVersion = "v${project.version}"


	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	repositories {
	}
}

tasks.named("sourcesJar") {
	archiveVersion = "v${project.version}"
}

tasks.matching { it.name == "remapJar" }.configureEach {
	archiveVersion = "v${project.version}"
}

tasks.matching { it.name == "remapSourcesJar" }.configureEach {
	archiveVersion = "v${project.version}"
}
